--- a/style.css
+++ b/style.css
@@ -6,6 +6,18 @@
     box-sizing: border-box;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
   scroll-behavior: smooth;
 }
