--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ nav {
   }
   
   .footer p {
-    color: rgb(200, 200, 200);
+    color: #c8c8c8;
     display: flex;
     justify-content: center;
     padding-top: 50px;
