--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ nav {
     background-color: #303030;
   }
   
-  .footer p {
+  .patickatext {
     color: #c8c8c8;
     display: flex;
     justify-content: center;
