--- a/style.css
+++ b/style.css
@@ -53,6 +53,51 @@ nav {
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
 
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+}
+
+@media(max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate (45deg);
+    }
+    
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu {
+        position: fixed;
+        left: -100%
+        top: 70px;
+        gap: 0;
+        flex-direction: column;
+        background-color: #303030;
+        width: 100%;
+        text-align: center;
+    }
+
+    .nav-item {
+        margin: 16px 0;
+    }
+}
+
 /* VIDEO HOMEPAGE */
 .hlavniVideo {
     position: relative;
