--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html {
 
 nav {
     top: 0;
-    left: 50%;
+    left: 0;
     width: 100%;
     position: fixed;
     padding: 15px;
@@ -46,6 +46,7 @@ nav {
 }
 
 .navigace {
+    Left: 50%;
     list-style: none;
     display: flex;
     flex-direction: row;
