--- a/style.css
+++ b/style.css
@@ -574,6 +574,10 @@ nav {
         padding-right: 7px;
     }
 
+    .kdoJsem {
+        height: 550px;
+    }
+
     .kdoJsemNadpisClanku {
         font-size: 22px;
     }
