--- a/style.css
+++ b/style.css
@@ -425,7 +425,7 @@ nav {
   /* Soubory S Projekty */
 
   .souborySProjekty {
-    display: flex;
+    display: block;
     justify-content: center; /* Centrování obsahu na ose X (horizontálně) */
     align-items: center;
     height: 600px;
@@ -591,4 +591,65 @@ nav {
 }
 
 
+/***** Poznámky / Jeden projekt *****/
+
+.poznamky {
+    height: 210px;
+    width: 97.5%;
+    border: #969696 3px solid;
+    border-radius: 9px;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    /*display: flex;
+    justify-content: center;
+    align-items: center;*/
+}
+
+.poznamky h1 {
+    display: block;
+    text-align:left;
+    margin-left: 7px;
+    font-size: 36px;
+    font-weight: 500;
+}
+
+
+
+.poznamky p {
+    position: absolute;
+    font-family:'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-size: 22px;
+    margin-left:7px;
+    margin-top: 10px;
+    width:75%;
+}
+
+.navodKeStazeni p {
+    font-size: 16px;
+    top: 320px;
+}
+
+.poznamky button {
+    position: absolute;
+    display: flex;
+    justify-content:right;
+    left: 80%;
+    top: 260px;
+    padding: 30px;
+    font-size: 18px;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    color:#fff;
+    font-weight: 550;
+    border: 5px solid rgb(0, 78, 194);
+    border-radius:9px;
+    background-color: #06F;
+}
+.poznamky button a {
+    font-size: 18px;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    color:#fff;
+    font-weight: 550;
+    text-decoration: none;
+}
 
