--- a/style.css
+++ b/style.css
@@ -628,8 +628,9 @@ nav {
 }
 
 .navodKeStazeni p {
+    position: relative;
     font-size: 16px;
-    top: 320px;
+    
 }
 
 .poznamky button {
@@ -741,5 +742,33 @@ nav {
         top: 300px;
         display: none;
     }
+}
+
+
+.projekt {
+    height: 210px;
+    width: 97.5%;
+    border: #969696 3px solid;
+    border-radius: 9px;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.projekt h1 {
+    display: block;
+    text-align:left;
+    margin-left: 7px;
+    font-size: 36px;
+    font-weight: 500;
+}
+
+.projekt p {
+    position: absolute;
+    font-family:'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-size: 22px;
+    margin-left:7px;
+    margin-top: 10px;
+    width:75%;
 }
 
