--- a/style.css
+++ b/style.css
@@ -630,7 +630,7 @@ nav {
 .navodKeStazeni p {
     position: relative;
     font-size: 16px;
-    
+    top: 325px
 }
 
 .poznamky button {
@@ -770,5 +770,9 @@ nav {
     margin-left:7px;
     margin-top: 10px;
     width:75%;
+}
+
+.iframeProjekt {
+    margin-top: 150px;
 }
 
