--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* LANDING PAGE */
 
 #Landing{
     display: flex;
@@ -71,6 +72,30 @@
     background-color: rgba(0,0,0,0);
     border-radius: 5px;
 }
+
+/* LANDING PAGE RESPONIZIVITA */
+
+@media only screen and (max-width: 660px) {
+    .HlavniNadpis {
+        font-size: 72px;
+    }
+
+    .HlavniPodnadpis {
+        font-size: 19px;
+    }
+  }
+
+  @media only screen and (max-width: 460px) {
+    .HlavniNadpis {
+        font-size: 54px;
+    }
+
+    .HlavniPodnadpis {
+        font-size: 18px;
+    }
+  }
+
+
 
 #dalsi {
     height: 100px;
