--- a/styles.css
+++ b/styles.css
@@ -99,12 +99,12 @@
 /* TODO: Udělat responzivitu a přidat obrázek do modrého pole */
 
 #aboutme {
-    display:flex;
-    height: 480px;
+    display: flex;
     flex-direction: row;
-    /*background-color: #000000;*/
+    height: 480px;
 }
 
+/* Style for desktop */
 .part23 {
     height: 100%;
     width: 70%;
@@ -121,8 +121,8 @@
 }
 
 .aboutblock {
-    padding: 50px 50px 50px 50px;
-    display:flex;
+    padding: 50px;
+    display: flex;
     flex-direction: column;
 }
 
@@ -146,5 +146,68 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
     font-weight: 500;
-    color:#F4F4F6
+    color: #F4F4F6;
+}
+
+/* Responsive styles */
+@media only screen and (max-width: 1024px) {
+    #aboutme {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .part23, .part13 {
+        width: 100%;
+        height: auto;
+    }
+
+    .part13 {
+        display: none; /* Hide the part13 on medium screens */
+    }
+
+    .aboutnadpis {
+        font-size: 56px; /* Smaller heading for medium screens */
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .aboutblock {
+        padding: 20px;
+    }
+
+    .aboutnadpis {
+        font-size: 40px; /* Smaller heading for small screens */
+    }
+
+    .aboutpodnadpis {
+        font-size: 18px;
+    }
+
+    .abouttext {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .aboutblock {
+        padding: 10px;
+    }
+
+    .aboutnadpis {
+        font-size: 32px; /* Even smaller heading for very small screens */
+    }
+
+    .aboutpodnadpis {
+        font-size: 16px;
+    }
+
+    .abouttext {
+        font-size: 14px;
+    }
+}
+
+
+.projekty {
+    background-color: brown;
+    height: 200px;
 }
