--- a/styles.css
+++ b/styles.css
@@ -390,3 +390,18 @@ WIP: PROJEKTY
     width: 100%;
     background-color: #001015;
 }
+
+.footertext {
+    color:#F4F4F6;
+    text-align: center;
+    padding: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 17px;
+
+}
+
+@media only screen and (max-width: 768px) {
+    .footertext {
+        font-size: 15px;
+    }
+}
