--- a/styles.css
+++ b/styles.css
@@ -402,7 +402,7 @@ WIP: PROJEKTY
     padding: 0 50px 50px 50px;
 }
 
-.fa-brands {
+.fa-brands1 {
     padding: 20px;
     font-size: 30px;
     width: 70px;
@@ -415,11 +415,11 @@ WIP: PROJEKTY
     transition: border-radius 0.4s ease;
 }
 
-.fa-brands:hover {
+.fa-brands1:hover {
     border-radius: 25%;
 }
 
-.fa-brands:active {
+.fa-brands1:active {
     border-radius: 0%;
 }
 
@@ -459,7 +459,7 @@ WIP: PROJEKTY
         padding: 30px 30px;
     }
 
-    .fa-brands {
+    .fa-brands1 {
         width: 60px; /* Slightly smaller icons for medium screens */
         font-size: 26px;
         margin-left: 10px;
@@ -479,7 +479,7 @@ WIP: PROJEKTY
         font-size: 18px;
     }
 
-    .fa-brands {
+    .fa-brands1 {
         width: 60px; /* Smaller icons for small screens */
         font-size: 30px;
         padding: 15px;
@@ -499,7 +499,7 @@ WIP: PROJEKTY
         font-size: 16px;
     }
 
-    .fa-brands {
+    .fa-brands1 {
         width: 60px; /* Smaller icons for small screens */
         font-size: 30px;
         padding: 15px;
@@ -534,4 +534,66 @@ WIP: PROJEKTY
     .footertext {
         font-size: 15px;
     }
+}
+
+/*+*+*+*+*+*+*+*+*/
+/*   Bio linky   */
+/*+*+*+*+*+*+*+*+*/
+
+#BioPage {
+    width: 100%;
+    height: 100vh;
+    background-color: #00171F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#BioWindow {
+    min-height: 65vh;
+    width: 520px;
+    border-radius: 25px;
+    background-color: #F4F4F6;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 15px 0 15px;
+    margin: 0 25px 0 25px;
+    box-shadow: 0px 0px 10px 2px rgba(227, 227, 230, 0.5);
+}
+
+.bioitem {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 15px;
+    min-height: 70px;
+    border-radius: 10px;
+    background-color: #279AF1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    text-decoration: none;
+    transition: scale 0.4s ease;
+}
+
+.bioitem:hover{
+    scale: 1.03;
+}
+
+.bioitem:active {
+    transition: border-radius 0.1s ease;
+    border-radius: 5px;
+}
+
+.bioitem p {
+    text-align: end;
+    color: #F4F4F6;
+    font-size: 24px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 500;
+}
+
+.fa-brands2 {
+    font-size: 38px;
+    color: #F4F4F6;
 }
