--- a/styles.css
+++ b/styles.css
@@ -541,11 +541,11 @@ WIP: PROJEKTY
 
 #BioPage {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #00171F;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 #BioWindow {
@@ -556,7 +556,7 @@ WIP: PROJEKTY
     display: flex;
     flex-direction: column;
     padding: 15px 15px 0 15px;
-    margin: 0 25px 0 25px;
+    margin: 15vh 25px 25px 25px;
     box-shadow: 0px 0px 10px 2px rgba(227, 227, 230, 0.5);
 }
 
