--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ html {
     align-items: center;
     background: transparent;
     backdrop-filter: blur(10px);
+    isolation: isolate;
     transition: background-color 0.4s ease;
 }
 
@@ -87,18 +88,23 @@ html {
     }
 
     .navbar {
-        display: none; /* Skryjeme navigaci pro mobilní verzi */
+        display: flex;
         flex-direction: column;
+        justify-content: center;
         position: absolute;
         top: 60px; /* Nastavíme pozici pod hlavičku */
-        right: 0;
-        background-color: rgba(0, 0, 0, 0.7); /* Pozadí menu */
-        padding: 20px;
+        background-color: rgba(0, 0, 0, 0.85); /* Pozadí menu */
+        padding: 20px 20px 20px 40px;
         width: 100%; /* Zabereme celou šířku obrazovky */
+        height: 100vh;
+        z-index: 20;
+        left: -100%;
+        transition: left 0.6s ease;
     }
 
     .navbar a {
         margin: 10px 0; /* Vertikální mezera mezi odkazy */
+        font-size: 36px;
     }
 
     /* Zobrazíme hamburger menu ikonu */
@@ -108,7 +114,9 @@ html {
 
     /* Když je menu otevřené */
     .navbar.active {
-        display: flex; /* Zobrazí se menu */
+        display: flex;
+        backdrop-filter: blur(10px);/* Zobrazí se menu */
+        left: 0;
     }
 }
 
