--- a/mainStyles.scss
+++ b/mainStyles.scss
@@ -3,6 +3,33 @@ $darkColor: #00171F;
 $mainBlueColor: #279AF1;
 $whiteColor: #F4F4F6;
 
+/* Animace */
+
+@keyframes fadeSlideLeft {
+  0% {
+    transform: translateX(-2%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeSlideRight {
+  0% {
+    transform: translateX(2%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
+/* Základní styly */
+
 * {
   margin: 0;
   padding: 0;
@@ -160,6 +187,7 @@ html {
 }
 
 .HlavniNadpis {
+  animation: slideDown 1s ease-out forwards;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 700;
   font-size: 108px;
@@ -285,6 +313,7 @@ html {
 }
 
 .aboutnadpis {
+  animation: fadeSlideLeft ease-in-out 1s;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
   font-size: 72px;
@@ -417,6 +446,7 @@ WIP: PROJEKTY
 }
 
 .flwnadpis {
+  animation: fadeSlideRight ease-in-out 1s;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
   font-size: 72px;
