--- a/mainStyles.css
+++ b/mainStyles.css
@@ -19,8 +19,18 @@
   }
 }
 @keyframes slideLeft {
+  @media (max-width: 480px) {
+    from {
+      opacity: 0;
+      filter: blur(7px);
+    }
+    to {
+      opacity: 1;
+      filter: blur(0);
+    }
+  }
   from {
-    transform: translateX(-50px);
+    transform: translateX(-10%);
     opacity: 0;
     filter: blur(7px);
   }
@@ -31,8 +41,18 @@
   }
 }
 @keyframes slideRight {
+  @media (max-width: 480px) {
+    from {
+      opacity: 0;
+      filter: blur(7px);
+    }
+    to {
+      opacity: 1;
+      filter: blur(0);
+    }
+  }
   from {
-    transform: translateX(50px);
+    transform: translateX(10%);
     opacity: 0;
     filter: blur(7px);
   }
