--- a/mainStyles.css
+++ b/mainStyles.css
@@ -19,16 +19,6 @@
   }
 }
 @keyframes slideLeft {
-  @media (max-width: 770px) {
-    from {
-      opacity: 0;
-      filter: blur(7px);
-    }
-    to {
-      opacity: 1;
-      filter: blur(0);
-    }
-  }
   from {
     transform: translateX(-10%);
     opacity: 0;
@@ -41,16 +31,6 @@
   }
 }
 @keyframes slideRight {
-  @media (max-width: 770px) {
-    from {
-      opacity: 0;
-      filter: blur(7px);
-    }
-    to {
-      opacity: 1;
-      filter: blur(0);
-    }
-  }
   from {
     transform: translateX(10%);
     opacity: 0;
@@ -60,6 +40,18 @@
     transform: translateX(0);
     opacity: 1;
     filter: blur(0);
+  }
+}
+@media (max-width: 770px) {
+  @keyframes slideRight {
+    from {
+      opacity: 0;
+      filter: blur(7px);
+    }
+    to {
+      opacity: 1;
+      filter: blur(0);
+    }
   }
 }
 * {
@@ -436,6 +428,7 @@ body {
   color: black;
   border-radius: 50%;
   margin-left: 15px;
+  margin-bottom: 15px;
   transition: border-radius 0.4s ease;
 }
 .fa-brands1:hover {
