Přidán odkaz na Printables
Took 29 minutes

--- a/otherAssets/fontawesome-free-icons/css/brands.css
+++ b/otherAssets/fontawesome-free-icons/css/brands.css
@@ -18,6 +18,12 @@
 .fa-brands {
   font-weight: 400; }
 
+/* Custom */
+.cfa-printables:before {
+
+}
+/* Regular */
+
 .fa-monero:before {
   content: "\f3d0"; }
 
